--- a/iletisim.html
+++ b/iletisim.html
@@ -28,10 +28,10 @@ footer{background:#111;color:white;text-align:center;padding:20px;font-size:0.9e
 <section>
 <h2>İletişim & Konum</h2>
 <div class="contact-info">
-    <p>Email: info@recomotors.com</p>
-    <p>Telefon: +90 555 123 45 67</p>
+    <p>Email: aykutrecep07@gmail.com</p>
+    <p>Telefon: +90 530 413 94 41</p>
 </div>
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3057.7596482347136!2d28.97835941522497!3d41.00823887930319!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14cabf9e0ee19bbd%3A0x6b1e7d4e6f3d0c5a!2zU3RhdGVsYW0gQ2l0eSwgUXVlbiBUYW1lc20!5e0!3m2!1str!2str!4v1698772265117!5m2!1str!2str" allowfullscreen="" loading="lazy"></iframe>
+<iframe src=<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6039.877025794104!2d29.43062859842234!3d40.80734493551738!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14cb209474639f83%3A0xf83dde6d69243e4a!2sG%C3%BCzeller%2C%2041400%20Gebze%2FKocaeli!5e0!3m2!1str!2str!4v1759524442751!5m2!1str!2str" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>></iframe>
 </section>
 
 <footer>
