--- a/iletisim.html
+++ b/iletisim.html
@@ -31,8 +31,7 @@ footer{background:#111;color:white;text-align:center;padding:20px;font-size:0.9e
     <p>Email: aykutrecep07@gmail.com</p>
     <p>Telefon: +90 530 413 94 41</p>
 </div>
-<iframe src=<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6039.877025794104!2d29.43062859842234!3d40.80734493551738!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14cb209474639f83%3A0xf83dde6d69243e4a!2sG%C3%BCzeller%2C%2041400%20Gebze%2FKocaeli!5e0!3m2!1str!2str!4v1759524442751!5m2!1str!2str" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>></iframe>
-</section>
+<iframe src=https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6039.877025794104!2d29.43062859842234!3d40.80734493551738!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14cb209474639f83%3A0xf83dde6d69243e4a!2sG%C3%BCzeller%2C%2041400%20Gebze%2FKocaeli!5e0!3m2!1str!2str!4v1759524955407!5m2!1str!2str" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"
 
 <footer>
 <p>© 2025 RECO MOTORS</p>
